--- a/css/master.css
+++ b/css/master.css
@@ -30,15 +30,6 @@
   align-items: center;
 }
 
-
-.body div {
-  width: 50px;
-  height: 50px;
-  background-color: skyblue;
-  margin: 20px; 0;
-  /*visibility: hidden;*/
-}
-
 input {
   height: 24px;
   font-size: 20px;
@@ -84,6 +75,79 @@ input {
   margin: 10px 0;
 }
 
+
+.body {
+  width: 500px;
+  height: 500px;
+  positon: absolute;
+}
+
+.body div {
+  width: 50px;
+  height: 50px;
+  background-color: skyblue;
+  margin: 20px; 0;
+  /*visibility: hidden;*/
+}
+
 #head {
+  position: relative;
   border-radius: 50%;
+  background-color: tan;
+  width: 80px;
+  height: 80px;
+  left: 220px;
+  margin: 0;
+}
+
+#neck {
+  position: relative;
+  background-color: tan;
+  width: 30px;
+  height: 40px;
+  left: 245px;
+  margin: 0;
+  top: -15px;
+}
+
+/*.midSection {
+  position: absolute;
+  width: 500px;
+  height: 180px;
+  margin: 0;
+}*/
+
+#torso {
+  position: relative;
+  width: 90px;
+  height: 160px;
+  top: -15px;
+  left: 215px;
+  margin: 0;
+  background-color: black;
+}
+
+#arm1 {
+  position: relative;
+  width: 40px;
+  height: 120px;
+  background-color: black;
+  margin: 0;
+  top: -185px;
+  left: 185px;
+  transform: rotate(30deg);
+  border-top-left-radius: 20px;
+}
+
+#arm2 {
+  position: relative;
+  width: 40px;
+  height: 120px;
+  background-color: black;
+  margin: 0;
+  top: -305px;
+  left: 305px;
+  transform: scaleX(-1) rotate(30deg);
+
+  border-top-left-radius: 20px;
 }
